# rustahouse

./: .env.example  .gitignore  Cargo.toml  diesel.toml  docker-compose.yml
bruno/: bruno.json  hello.bru
bruno/users/: Get users.bru
migrations/2024-10-30-052251_create_users/: up.sql
scripts/migrations/: migration-generate.sh  migration-revert.sh
src/: main.rs
src/db/: diesel.rs  mod.rs  schema.rs
src/db/models/: users.rs
src/modules/users/: controller.rs
