[package]
name = "rustahouse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
diesel = { version = "2.2.4", features = ['postgres', 'r2d2', 'uuid', 'chrono'] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
uuid = {version = "1.10.0", features = ['serde', 'v4']}
chrono = {version = "0.4.38", features = ['serde']}
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"