[package]
name = "rustahouse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.2"
diesel = { version = "2.2.4", features = ['postgres', 'r2d2', 'uuid', 'chrono'] }
diesel-async = { version = "0.5.1", features = ["postgres", "bb8"] }
tokio = { version = "1.40.0", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ['serde', 'v4'] }
chrono = { version = "0.4.38", features = ['serde'] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
bb8 = "0.8"